@@ -109,6 +109,7 @@ unit-tests/modmisc
 unit-tests/modorder
 unit-tests/modts
 unit-tests/modword
+unit-tests/phony-end
 unit-tests/posix
 unit-tests/qequals
 unit-tests/sysv
